Add logic to override the steps in tests